--- a/main/index.html
+++ b/main/index.html
@@ -9,11 +9,25 @@
 </head>
 <body>
   <header>
+
     <div class="iconos">
-      <img src="./img/lupa.png" alt="Lupa">
+      
+      <div class="menu-icon" id="menuIcon">
+        <img src="./img/menu.png" alt="Lupa">
+      </div>
+
       <img src="./img/carro.png" alt="Carro">
-      <a href="login.html"><img src="./img/usuario.png" alt="Usuario"></a>
+      <a href="login.html"><img src="./img/usuario.png" alt="Usuario" id="iconoMenu"></a>
+
     </div>
+
+    <nav class="menu" id="menu">
+      <ul>
+        <li>Comprar cápsulas</li>
+        <li>Comprar máquinas</li>
+      </ul>
+    </nav>
+
   </header>
 
   <div>
@@ -78,6 +92,6 @@
       </div>
     </section>
   </main>
-  <script src="./js/index.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 </html>
