--- a/main/index.html
+++ b/main/index.html
@@ -10,6 +10,10 @@
 <body>
   <header>
 
+    <div class = "logo">
+      <img src="./img/logo.png" alt="logo">
+    </div>
+
     <div class="iconos">
       
       <div class="menu-icon" id="menuIcon">
@@ -92,6 +96,20 @@
       </div>
     </section>
   </main>
+  <footer>
+    <br>
+    <hr/>
+    <div class="pie">
+      <img src="./img/logo.png" alt="logo">
+      <p>Copyright © 2024 Luis Ponce & Pablo Arroyo</p>
+      <a href=""><p>Informacion legal</a> | <a href="">Informacion legal</p></a>
+    </div>
+    <br>
+    <br>
+    <hr>
+    <br>
+    <br>
+  </footer>
   <script src="./js/script.js"></script>
 </body>
 </html>
