--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <h1>Iniciar sesión</h1><br>
       <form name="login" netlify>
         <input type="text" placeholder="Usuario" class="input"><br><br><br>
-        <!-- <input type="password" placeholder="Contraseña" class="input"><br><br><br><br><br><br> -->
+        <input type="password" placeholder="Contraseña" class="input"><br><br><br><br><br><br>
         <input type="submit" value="Iniciar sesión" class="aceptar" >
       </form>
     </div>
