--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <div class="modal hidden">
       <button class="close-modal">&times;</button>
       <h1>Iniciar sesión</h1><br>
-      <form name="login" netlify>
+      <form  action="index.html" name="login" netlify>
         <input type="text" name="usuario" placeholder="Usuario" class="input"><br><br><br>
         <input type="password" name="pass" placeholder="Contraseña" class="input"><br><br><br><br><br><br>
         <input type="submit" value="Iniciar sesión" class="aceptar" >
