--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
     <br>
     <hr/>
     <div class="pie">
-      <img src="./img/logo.png" alt="logo">
+      <img src="./img/logo.png" alt="logo" />
       <p>Copyright © 2024 Luis Ponce & Pablo Arroyo</p>
-      <a href=""><p>Informacion legal</a> | <a href="">Contáctanos</p></a>
+      <a href="#"><p>Informacion legal</a> | <a href="#">Contáctanos</p></a>
     </div>
     <br>
     <br>
