--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <div class="pie">
       <img src="./img/logo.png" alt="logo" />
       <p>Copyright © 2024 Luis Ponce & Pablo Arroyo</p>
-      <a href="#"><p>Informacion legal</a> | <a href="#">Contáctanos</p></a>
+      <a href="#">Informacion legal</a> | <a href="#">Contáctanos</a>
     </div>
     <br>
     <br>
